Updated HC4 zh, ru for more metrics, fixed MAP to 1k

--- a/src/main/resources/regression/hc4-v1.0-ru.yaml
+++ b/src/main/resources/regression/hc4-v1.0-ru.yaml
@@ -14,11 +14,25 @@ index_stats:
 metrics:
   - metric: MAP
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m map
+    params:  -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: true
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m ndcg_cut.10
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: J@10
+    command: python -m pyserini.eval.trec_eval
+    params: -c -m judged.10
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -56,32 +70,74 @@ models:
     params: -bm25 -language ru
     results:
       MAP:
-        - 0.2767
-        - 0.2321
-        - 0.3130
-        - 0.2105
-        - 0.1779
-        - 0.2178
+        - 0.2937
+        - 0.2374
+        - 0.3209
+        - 0.2186
+        - 0.1880
+        - 0.2267
+      nDCG@10:
+        - 0.3711
+        - 0.2137
+        - 0.3835
+        - 0.2727
+        - 0.2146
+        - 0.2672
+      J@10:
+        - 0.5500
+        - 0.6250
+        - 0.6250
+        - 0.4140
+        - 0.3800
+        - 0.4420
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language ru
     results:
       MAP:
-        - 0.2266
-        - 0.0821
-        - 0.2037
-        - 0.2293
-        - 0.1787
-        - 0.2202
+        - 0.2390
+        - 0.0844
+        - 0.2150
+        - 0.2369
+        - 0.1874
+        - 0.2290
+      nDCG@10:
+        - 0.2531
+        - 0.1875
+        - 0.3411
+        - 0.2983
+        - 0.2259
+        - 0.2814
+      J@10:
+        - 0.4250
+        - 0.5000
+        - 0.6250
+        - 0.4320
+        - 0.3560
+        - 0.4280
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language ru
     results:
       MAP:
-        - 0.3897
-        - 0.2776
-        - 0.3532
-        - 0.2505
-        - 0.2151
-        - 0.2610
+        - 0.3995
+        - 0.2817
+        - 0.3565
+        - 0.2592
+        - 0.2252
+        - 0.2703
+      nDCG@10:
+        - 0.4249
+        - 0.2533
+        - 0.4199
+        - 0.2976
+        - 0.2509
+        - 0.2896
+      J@10:
+        - 0.6000
+        - 0.6000
+        - 0.6250
+        - 0.4600
+        - 0.4020
+        - 0.4700
 
