--- a/src/main/resources/docgen/templates/hc4-neuclir22-fa.template
+++ b/src/main/resources/docgen/templates/hc4-neuclir22-fa.template
@@ -2,6 +2,7 @@
 
 This page documents BM25 regression experiments for [HC4 (v1.0) Persian topics](https://github.com/hltcoe/HC4) on the [NeuCLIR22 Persian corpus](https://neuclir.github.io/).
 The HC4 qrels have been filtered down to include only those in the intersection of the HC4 and NeuCLIR22 corpora.
+To be clear, the queries are in Persian (human translations) and the corpus is in Persian.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
