--- a/src/main/resources/regression/hc4-neuclir22-fa-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-fa-en.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: neuclir22-fa
-corpus_path: collections/multilingual/neuclir22-fa/
+corpus: neuclir22-fa-en
+corpus_path: collections/multilingual/neuclir22-fa-en/
 
-index_path: indexes/lucene-index.neuclir22-fa
+index_path: indexes/lucene-index.neuclir22-fa-en
 collection_class: NeuClirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
-index_options: -storePositions -storeDocvectors -storeRaw -language fa
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 2232016
-  documents (non-empty): 2232016
+  documents (non-empty): 2232013
 
 metrics:
   - metric: MAP
@@ -40,15 +40,15 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[HC4 (Persian): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
-    path: topics.hc4-v1.0-fa.test.title.tsv.gz
+    path: topics.hc4-v1.0-fa.en.test.title.tsv.gz
     qrel: qrels.hc4-neuclir22-fa.test.txt
   - name: "[HC4 (Persian): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
-    path: topics.hc4-v1.0-fa.test.desc.tsv.gz
+    path: topics.hc4-v1.0-fa.en.test.desc.tsv.gz
     qrel: qrels.hc4-neuclir22-fa.test.txt
   - name: "[HC4 (Persian): test-topic description+title](https://github.com/hltcoe/HC4)"
     id: test_description_title
-    path: topics.hc4-v1.0-fa.test.desc.title.tsv.gz
+    path: topics.hc4-v1.0-fa.en.test.desc.title.tsv.gz
     qrel: qrels.hc4-neuclir22-fa.test.txt
 
 models:
@@ -57,46 +57,46 @@ models:
     params: -bm25 -language fa
     results:
       MAP:
-        - 0.1198
-        - 0.1435
-        - 0.1438
+        - 0.0519
+        - 0.0526
+        - 0.0571
       nDCG@10:
-        - 0.1514
-        - 0.1971
-        - 0.1913
+        - 0.0569
+        - 0.0529
+        - 0.0643
       J@10:
-        - 0.1760
-        - 0.1720
-        - 0.1800
+        - 0.0796
+        - 0.0800
+        - 0.0920
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language fa
     results:
       MAP:
-        - 0.1050
-        - 0.0845
-        - 0.1079
+        - 0.0489
+        - 0.0485
+        - 0.0668
       nDCG@10:
-        - 0.1286
-        - 0.1053
-        - 0.1491
+        - 0.0348
+        - 0.0442
+        - 0.0689
       J@10:
-        - 0.1260
-        - 0.1260
-        - 0.1460
+        - 0.0680
+        - 0.0700
+        - 0.0880
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language fa
     results:
       MAP:
-        - 0.1221
-        - 0.1254
-        - 0.1351
+        - 0.0503
+        - 0.0562
+        - 0.0661
       nDCG@10:
-        - 0.1404
-        - 0.1703
-        - 0.1683
+        - 0.0423
+        - 0.0522
+        - 0.0681
       J@10:
-        - 0.1620
-        - 0.1800
-        - 0.1660
+        - 0.0720
+        - 0.0700
+        - 0.0880
