--- a/src/main/resources/regression/hc4-neuclir22-ru-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-ru-en.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: neuclir22-ru
-corpus_path: collections/multilingual/neuclir22-ru/
+corpus: neuclir22-ru-en
+corpus_path: collections/multilingual/neuclir22-ru-en/
 
-index_path: indexes/lucene-index.neuclir22-ru
+index_path: indexes/lucene-index.neuclir22-ru-en
 collection_class: NeuClirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
-index_options: -storePositions -storeDocvectors -storeRaw -language ru
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 4627541
-  documents (non-empty): 4627532
+  documents (non-empty): 4625762
 
 metrics:
   - metric: MAP
@@ -40,15 +40,15 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[HC4 (Russian): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
-    path: topics.hc4-v1.0-ru.test.title.tsv.gz
+    path: topics.hc4-v1.0-ru.en.test.title.tsv.gz
     qrel: qrels.hc4-neuclir22-ru.test.txt
   - name: "[HC4 (Russian): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
-    path: topics.hc4-v1.0-ru.test.desc.tsv.gz
+    path: topics.hc4-v1.0-ru.en.test.desc.tsv.gz
     qrel: qrels.hc4-neuclir22-ru.test.txt
   - name: "[HC4 (Russian): test-topic description+title](https://github.com/hltcoe/HC4)"
     id: test_description_title
-    path: topics.hc4-v1.0-ru.test.desc.title.tsv.gz
+    path: topics.hc4-v1.0-ru.en.test.desc.title.tsv.gz
     qrel: qrels.hc4-neuclir22-ru.test.txt
 
 models:
@@ -57,46 +57,46 @@ models:
     params: -bm25 -language ru
     results:
       MAP:
-        - 0.0964
-        - 0.0926
-        - 0.1113
+        - 0.0305
+        - 0.0351
+        - 0.0326
       nDCG@10:
-        - 0.1225
-        - 0.1078
-        - 0.1423
+        - 0.0385
+        - 0.0365
+        - 0.0461
       J@10:
-        - 0.1060
-        - 0.1000
-        - 0.1140
+        - 0.0497
+        - 0.0220
+        - 0.0320
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language ru
     results:
       MAP:
-        - 0.0811
-        - 0.0605
-        - 0.0771
+        - 0.0416
+        - 0.0278
+        - 0.0389
       nDCG@10:
-        - 0.1093
-        - 0.0758
-        - 0.1099
+        - 0.0420
+        - 0.0364
+        - 0.0521
       J@10:
-        - 0.1000
-        - 0.0840
-        - 0.1040
+        - 0.0460
+        - 0.0300
+        - 0.0360
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language ru
     results:
       MAP:
-        - 0.1245
-        - 0.1064
-        - 0.1341
+        - 0.0468
+        - 0.0307
+        - 0.0370
       nDCG@10:
-        - 0.1455
-        - 0.1382
-        - 0.1682
+        - 0.0545
+        - 0.0399
+        - 0.0546
       J@10:
-        - 0.1200
-        - 0.1120
-        - 0.1120
+        - 0.0560
+        - 0.0320
+        - 0.0420
