--- a/src/main/resources/regression/hc4-neuclir22-zh-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-zh-en.yaml
@@ -1,15 +1,15 @@
 ---
-corpus: neuclir22-zh
-corpus_path: collections/multilingual/neuclir22-zh/
+corpus: neuclir22-zh-en
+corpus_path: collections/multilingual/neuclir22-zh-en/
 
-index_path: indexes/lucene-index.neuclir22-zh
+index_path: indexes/lucene-index.neuclir22-zh-en
 collection_class: NeuClirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
-index_options: -storePositions -storeDocvectors -storeRaw -language zh
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 3179206
-  documents (non-empty): 3179206
+  documents (non-empty): 3179203
 
 metrics:
   - metric: MAP
@@ -40,15 +40,15 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[HC4 (Chinese): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
-    path: topics.hc4-v1.0-zh.test.title.tsv.gz
+    path: topics.hc4-v1.0-zh.en.test.title.tsv.gz
     qrel: qrels.hc4-neuclir22-zh.test.txt
   - name: "[HC4 (Chinese): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
-    path: topics.hc4-v1.0-zh.test.desc.tsv.gz
+    path: topics.hc4-v1.0-zh.en.test.desc.tsv.gz
     qrel: qrels.hc4-neuclir22-zh.test.txt
   - name: "[HC4 (Chinese): test-topic description+title](https://github.com/hltcoe/HC4)"
     id: test_description_title
-    path: topics.hc4-v1.0-zh.test.desc.title.tsv.gz
+    path: topics.hc4-v1.0-zh.en.test.desc.title.tsv.gz
     qrel: qrels.hc4-neuclir22-zh.test.txt
 
 models:
@@ -57,46 +57,46 @@ models:
     params: -bm25 -language zh
     results:
       MAP:
-        - 0.0561
-        - 0.0428
-        - 0.0597
+        - 0.0338
+        - 0.0431
+        - 0.0447
       nDCG@10:
-        - 0.0737
-        - 0.0612
-        - 0.0727
+        - 0.0482
+        - 0.0626
+        - 0.0708
       J@10:
-        - 0.0820
+        - 0.0625
+        - 0.0560
         - 0.0740
-        - 0.0720
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language zh
     results:
       MAP:
-        - 0.0449
-        - 0.0262
-        - 0.0435
+        - 0.0388
+        - 0.0303
+        - 0.0430
       nDCG@10:
-        - 0.0550
-        - 0.0327
-        - 0.0556
+        - 0.0447
+        - 0.0428
+        - 0.0539
       J@10:
-        - 0.0660
-        - 0.0480
-        - 0.0600
+        - 0.0521
+        - 0.0420
+        - 0.0580
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language zh
     results:
       MAP:
-        - 0.0488
-        - 0.0277
-        - 0.0462
+        - 0.0393
+        - 0.0344
+        - 0.0452
       nDCG@10:
-        - 0.0626
-        - 0.0397
-        - 0.0634
+        - 0.0463
+        - 0.0503
+        - 0.0562
       J@10:
-        - 0.0820
-        - 0.0720
-        - 0.0800
+        - 0.0563
+        - 0.0500
+        - 0.0620
