--- a/src/main/resources/regression/hc4-neuclir22-fa-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-fa-en.yaml
@@ -19,16 +19,23 @@ metrics:
     parse_index: 2
     metric_precision: 4
     can_combine: true
-  - metric: nDCG@10
+  - metric: nDCG@20
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m ndcg_cut.10
+    params: -c -m ndcg_cut.20
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: J@10
+  - metric: J@20
     command: python -m pyserini.eval.trec_eval
-    params: -c -m judged.10
+    params: -c -m judged.20
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: Recall@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -40,15 +47,15 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[HC4 (Persian): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
-    path: topics.hc4-v1.0-fa.en.test.title.tsv.gz
+    path: topics.hc4-v1.0-fa.en.test.title.tsv
     qrel: qrels.hc4-neuclir22-fa.test.txt
   - name: "[HC4 (Persian): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
-    path: topics.hc4-v1.0-fa.en.test.desc.tsv.gz
+    path: topics.hc4-v1.0-fa.en.test.desc.tsv
     qrel: qrels.hc4-neuclir22-fa.test.txt
   - name: "[HC4 (Persian): test-topic description+title](https://github.com/hltcoe/HC4)"
     id: test_description_title
-    path: topics.hc4-v1.0-fa.en.test.desc.title.tsv.gz
+    path: topics.hc4-v1.0-fa.en.test.desc.title.tsv
     qrel: qrels.hc4-neuclir22-fa.test.txt
 
 models:
@@ -60,14 +67,18 @@ models:
         - 0.0519
         - 0.0526
         - 0.0571
-      nDCG@10:
-        - 0.0569
-        - 0.0529
-        - 0.0643
-      J@10:
-        - 0.0796
-        - 0.0800
-        - 0.0920
+      nDCG@20:
+        - 0.0701
+        - 0.0745
+        - 0.0808
+      J@20:
+        - 0.0701
+        - 0.0730
+        - 0.0790
+      Recall@1000:
+        - 0.4490
+        - 0.4981
+        - 0.5285
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language fa
@@ -76,14 +87,18 @@ models:
         - 0.0489
         - 0.0485
         - 0.0668
-      nDCG@10:
-        - 0.0348
-        - 0.0442
-        - 0.0689
-      J@10:
-        - 0.0680
-        - 0.0700
-        - 0.0880
+      nDCG@20:
+        - 0.0671
+        - 0.0655
+        - 0.0955
+      J@20:
+        - 0.0790
+        - 0.0780
+        - 0.0920
+      Recall@1000:
+        - 0.4821
+        - 0.4803
+        - 0.5808
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language fa
@@ -92,11 +107,15 @@ models:
         - 0.0503
         - 0.0562
         - 0.0661
-      nDCG@10:
-        - 0.0423
-        - 0.0522
-        - 0.0681
-      J@10:
-        - 0.0720
-        - 0.0700
-        - 0.0880
+      nDCG@20:
+        - 0.0660
+        - 0.0738
+        - 0.0924
+      J@20:
+        - 0.0750
+        - 0.0760
+        - 0.0850
+      Recall@1000:
+        - 0.4848
+        - 0.4733
+        - 0.5671
