--- a/src/main/resources/regression/hc4-neuclir22-zh.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-zh.yaml
@@ -19,16 +19,23 @@ metrics:
     parse_index: 2
     metric_precision: 4
     can_combine: true
-  - metric: nDCG@10
+  - metric: nDCG@20
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m ndcg_cut.10
+    params: -c -m ndcg_cut.20
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: J@10
+  - metric: J@20
     command: python -m pyserini.eval.trec_eval
-    params: -c -m judged.10
+    params: -c -m judged.20
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: Recall@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -40,15 +47,15 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[HC4 (Chinese): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
-    path: topics.hc4-v1.0-zh.test.title.tsv.gz
+    path: topics.hc4-v1.0-zh.test.title.tsv
     qrel: qrels.hc4-neuclir22-zh.test.txt
   - name: "[HC4 (Chinese): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
-    path: topics.hc4-v1.0-zh.test.desc.tsv.gz
+    path: topics.hc4-v1.0-zh.test.desc.tsv
     qrel: qrels.hc4-neuclir22-zh.test.txt
   - name: "[HC4 (Chinese): test-topic description+title](https://github.com/hltcoe/HC4)"
     id: test_description_title
-    path: topics.hc4-v1.0-zh.test.desc.title.tsv.gz
+    path: topics.hc4-v1.0-zh.test.desc.title.tsv
     qrel: qrels.hc4-neuclir22-zh.test.txt
 
 models:
@@ -60,14 +67,18 @@ models:
         - 0.0561
         - 0.0428
         - 0.0597
-      nDCG@10:
-        - 0.0737
-        - 0.0612
-        - 0.0727
-      J@10:
-        - 0.0820
-        - 0.0740
-        - 0.0720
+      nDCG@20:
+        - 0.0759
+        - 0.0687
+        - 0.0881
+      J@20:
+        - 0.0620
+        - 0.0590
+        - 0.0710
+      Recall@1000:
+        - 0.4401
+        - 0.3565
+        - 0.4442
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language zh
@@ -76,14 +87,18 @@ models:
         - 0.0449
         - 0.0262
         - 0.0435
-      nDCG@10:
-        - 0.0550
-        - 0.0327
-        - 0.0556
-      J@10:
-        - 0.0660
-        - 0.0480
-        - 0.0600
+      nDCG@20:
+        - 0.0622
+        - 0.0379
+        - 0.0640
+      J@20:
+        - 0.0490
+        - 0.0360
+        - 0.0420
+      Recall@1000:
+        - 0.3909
+        - 0.2383
+        - 0.2673
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language zh
@@ -92,11 +107,15 @@ models:
         - 0.0488
         - 0.0277
         - 0.0462
-      nDCG@10:
-        - 0.0626
-        - 0.0397
-        - 0.0634
-      J@10:
-        - 0.0820
-        - 0.0720
-        - 0.0800
+      nDCG@20:
+        - 0.0767
+        - 0.0529
+        - 0.0735
+      J@20:
+        - 0.0760
+        - 0.0610
+        - 0.0740
+      Recall@1000:
+        - 0.4128
+        - 0.3858
+        - 0.4259
