--- a/src/main/resources/regression/hc4-v1.0-zh.yaml
+++ b/src/main/resources/regression/hc4-v1.0-zh.yaml
@@ -19,16 +19,23 @@ metrics:
     parse_index: 2
     metric_precision: 4
     can_combine: true
-  - metric: nDCG@10
+  - metric: nDCG@20
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m ndcg_cut.10
+    params: -c -m ndcg_cut.20
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: J@10
+  - metric: J@20
     command: python -m pyserini.eval.trec_eval
-    params: -c -m judged.10
+    params: -c -m judged.20
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: Recall@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -40,27 +47,27 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[HC4 (Chinese): dev-topic title](https://github.com/hltcoe/HC4)"
     id: dev_title
-    path: topics.hc4-v1.0-zh.dev.title.tsv.gz
+    path: topics.hc4-v1.0-zh.dev.title.tsv
     qrel: qrels.hc4-v1.0-zh.dev.txt
   - name: "[HC4 (Chinese): dev-topic description](https://github.com/hltcoe/HC4)"
     id: dev_description
-    path: topics.hc4-v1.0-zh.dev.desc.tsv.gz
+    path: topics.hc4-v1.0-zh.dev.desc.tsv
     qrel: qrels.hc4-v1.0-zh.dev.txt
   - name: "[HC4 (Chinese): dev-topic description+title](https://github.com/hltcoe/HC4)"
     id: dev_description_title_
-    path: topics.hc4-v1.0-zh.dev.desc.title.tsv.gz
+    path: topics.hc4-v1.0-zh.dev.desc.title.tsv
     qrel: qrels.hc4-v1.0-zh.dev.txt
   - name: "[HC4 (Chinese): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
-    path: topics.hc4-v1.0-zh.test.title.tsv.gz
+    path: topics.hc4-v1.0-zh.test.title.tsv
     qrel: qrels.hc4-v1.0-zh.test.txt
   - name: "[HC4 (Chinese): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
-    path: topics.hc4-v1.0-zh.test.desc.tsv.gz
+    path: topics.hc4-v1.0-zh.test.desc.tsv
     qrel: qrels.hc4-v1.0-zh.test.txt
   - name: "[HC4 (Chinese): test-topic description+title](https://github.com/hltcoe/HC4)"
     id: test_description_title
-    path: topics.hc4-v1.0-zh.test.desc.title.tsv.gz
+    path: topics.hc4-v1.0-zh.test.desc.title.tsv
     qrel: qrels.hc4-v1.0-zh.test.txt
 
 
@@ -76,20 +83,27 @@ models:
         - 0.1801
         - 0.1455
         - 0.1907
-      nDCG@10:
-        - 0.3688
-        - 0.2623
-        - 0.3445
-        - 0.2197
-        - 0.1874
-        - 0.2374
-      J@10:
-        - 0.5600
-        - 0.4700
-        - 0.6100
-        - 0.3500
-        - 0.3160
-        - 0.3820
+      nDCG@20:
+        - 0.3908
+        - 0.3023
+        - 0.3474
+        - 0.2526
+        - 0.2048
+        - 0.2596
+      J@20:
+        - 0.4250
+        - 0.3800
+        - 0.4150
+        - 0.3000
+        - 0.2470
+        - 0.3070
+      Recall@1000:
+        - 0.7964
+        - 0.7255
+        - 0.7663
+        - 0.6963
+        - 0.6358
+        - 0.7100
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -language zh
@@ -101,20 +115,27 @@ models:
         - 0.1613
         - 0.1051
         - 0.1485
-      nDCG@10:
-        - 0.3451
-        - 0.2660
-        - 0.3704
-        - 0.1953
-        - 0.1429
-        - 0.2026
-      J@10:
-        - 0.5500
-        - 0.4100
-        - 0.5200
-        - 0.3520
-        - 0.2680
-        - 0.3260
+      nDCG@20:
+        - 0.4296
+        - 0.3327
+        - 0.4094
+        - 0.2132
+        - 0.1597
+        - 0.2211
+      J@20:
+        - 0.4200
+        - 0.3250
+        - 0.3650
+        - 0.2760
+        - 0.1960
+        - 0.2460
+      Recall@1000:
+        - 0.7589
+        - 0.6730
+        - 0.7229
+        - 0.6764
+        - 0.4933
+        - 0.5903
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -language zh
@@ -126,17 +147,24 @@ models:
         - 0.1671
         - 0.1442
         - 0.1929
-      nDCG@10:
-        - 0.3220
-        - 0.2577
-        - 0.3082
-        - 0.1966
-        - 0.1685
-        - 0.2266
-      J@10:
-        - 0.5900
-        - 0.4700
-        - 0.5800
-        - 0.3800
-        - 0.3420
-        - 0.4100
+      nDCG@20:
+        - 0.3474
+        - 0.2963
+        - 0.3502
+        - 0.2236
+        - 0.1916
+        - 0.2644
+      J@20:
+        - 0.4250
+        - 0.3550
+        - 0.4250
+        - 0.3070
+        - 0.2740
+        - 0.3350
+      Recall@1000:
+        - 0.8365
+        - 0.7570
+        - 0.8241
+        - 0.6652
+        - 0.6481
+        - 0.7074
