--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,16 @@
               <id>IndexCollection</id>
             </program>
             <program>
+              <mainClass>io.anserini.index.IndexVectorCollection</mainClass>
+              <id>IndexVectorCollection</id>
+            </program>
+            <program>
               <mainClass>io.anserini.search.SearchCollection</mainClass>
               <id>SearchCollection</id>
+            </program>
+            <program>
+              <mainClass>io.anserini.search.SearchVectorCollection</mainClass>
+              <id>SearchVectorCollection</id>
             </program>
             <program>
               <mainClass>io.anserini.search.SearchMsmarco</mainClass>
