--- a/src/main/resources/regression/dl21-passage-d2q-t5.yaml
+++ b/src/main/resources/regression/dl21-passage-d2q-t5.yaml
@@ -87,3 +87,17 @@ models:
         - 0.4444
       R@1000:
         - 0.7512
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      MAP@100:
+        - 0.2282
+      MRR@100:
+        - 0.6780
+      nDCG@10:
+        - 0.5159
+      R@100:
+        - 0.4444
+      R@1000:
+        - 0.7548
