--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
@@ -76,3 +76,32 @@ models:
       R@1000:
         - 0.7616
         - 0.7671
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      MAP@100:
+        - 0.1333
+        - 0.1374
+      MRR@100:
+        - 0.1342
+        - 0.1385
+      R@100:
+        - 0.4976
+        - 0.5217
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      MAP@100:
+        - 0.1333
+        - 0.1374
+      MRR@100:
+        - 0.1342
+        - 0.1385
+      R@100:
+        - 0.4976
+        - 0.5217
+      R@1000:
+        - 0.7010
+        - 0.7114
