--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot-v2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot-v2.yaml
@@ -76,3 +76,35 @@ models:
       R@1000:
         - 0.9122
         - 0.9172
+  - name: unicoil-0shot-rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      MAP@100:
+        - 0.2388
+        - 0.2422
+      MRR@100:
+        - 0.2419
+        - 0.2445
+      R@100:
+        - 0.7791
+        - 0.7759
+      R@1000:
+        - 0.9122
+        - 0.9172
+  - name: unicoil-0shot-rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      MAP@100:
+        - 0.2388
+        - 0.2422
+      MRR@100:
+        - 0.2419
+        - 0.2445
+      R@100:
+        - 0.7791
+        - 0.7759
+      R@1000:
+        - 0.9122
+        - 0.9172
