--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 124131404
   documents (non-empty): 124131404
@@ -76,3 +76,35 @@ models:
       R@1000:
         - 0.8987
         - 0.8995
+  - name: unicoil-noexp-0shot-rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      MAP@100:
+        - 0.1963
+        - 0.2067
+      MRR@100:
+        - 0.1982
+        - 0.2092
+      R@100:
+        - 0.7453
+        - 0.7466
+      R@1000:
+        - 0.9026
+        - 0.9082
+  - name: unicoil-noexp-0shot-rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      MAP@100:
+        - 0.2011
+        - 0.2090
+      MRR@100:
+        - 0.2034
+        - 0.2112
+      R@100:
+        - 0.7520
+        - 0.7540
+      R@1000:
+        - 0.9084
+        - 0.9136
