--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot-v2.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot-v2.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 124131404
   documents (non-empty): 124131404
@@ -77,3 +77,31 @@ models:
         - 0.3563
       R@1000:
         - 0.6787
+  - name: unicoil-noexp-0shot-rm3
+    display: +RM3
+    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized -rm3
+    results:
+      MAP@100:
+        - 0.3130
+      MRR@100:
+        - 0.9183
+      nDCG@10:
+        - 0.6686
+      R@100:
+        - 0.4044
+      R@1000:
+        - 0.7510
+  - name: unicoil-noexp-0shot-rocchio
+    display: +RM3
+    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized -rocchio
+    results:
+      MAP@100:
+        - 0.3223
+      MRR@100:
+        - 0.9448
+      nDCG@10:
+        - 0.6718
+      R@100:
+        - 0.4147
+      R@1000:
+        - 0.7589
