--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot-v2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot-v2.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-0shot-v2/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 124131414
   documents (non-empty): 124131414
@@ -81,30 +81,30 @@ models:
     params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
-        - 0.2388
-        - 0.2422
+        - 0.2167
+        - 0.2198
       MRR@100:
-        - 0.2419
-        - 0.2445
+        - 0.2190
+        - 0.2225
       R@100:
-        - 0.7791
-        - 0.7759
+        - 0.7675
+        - 0.7639
       R@1000:
-        - 0.9122
-        - 0.9172
+        - 0.9175
+        - 0.9220
   - name: unicoil-0shot-rocchio
     display: +Rocchio
     params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
-        - 0.2388
-        - 0.2422
+        - 0.2229
+        - 0.2200
       MRR@100:
-        - 0.2419
-        - 0.2445
+        - 0.2252
+        - 0.2225
       R@100:
-        - 0.7791
-        - 0.7759
+        - 0.7775
+        - 0.7747
       R@1000:
-        - 0.9122
-        - 0.9172
+        - 0.9232
+        - 0.9253
